--- a/greentic-mcp/tests/fixtures/echo_tool/Cargo.toml
+++ b/greentic-mcp/tests/fixtures/echo_tool/Cargo.toml
@@ -7,7 +7,6 @@ edition = "2021"
 crate-type = ["cdylib"]
 
 [dependencies]
-serde = { version = "1", features = ["derive"] }
-serde_json = "1"
-wit-bindgen = { version = "0.47", features = ["macros"] }
-[workspace]
+serde.workspace = true
+serde_json.workspace = true
+wit-bindgen.workspace = true
