--- a/greentic-mcp/tests/fixtures/echo_tool/Cargo.toml
+++ b/greentic-mcp/tests/fixtures/echo_tool/Cargo.toml
@@ -2,6 +2,11 @@
 name = "echo_tool"
 version = "0.1.0"
 edition = "2021"
+publish = false
+description = "Test fixture for greentic-mcp; not intended for crates.io"
+license = "MIT"
+repository = "https://github.com/agentic/greentic-mcp"
+homepage = "https://github.com/agentic/greentic-mcp"
 
 [lib]
 crate-type = ["cdylib"]
@@ -10,3 +15,6 @@ crate-type = ["cdylib"]
 serde.workspace = true
 serde_json.workspace = true
 wit-bindgen.workspace = true
+
+[package.metadata]
+cargo-not-public = true
