--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,7 +11,7 @@ resolver = "2"
 edition = "2024"
 license = "MIT"
 repository = "https://github.com/agentic/greentic-mcp"
-version = "0.4.8"
+version = "0.4.11"
 
 [workspace.dependencies]
 anyhow = "1.0"
@@ -26,11 +26,12 @@ tracing = "0.1"
 wasmtime = { version = "40", default-features = false, features = ["async", "component-model", "cranelift", "runtime", "std"] }
 wasmtime-wasi = { version = "40", default-features = false, features = ["p2"] }
 tempfile = "3"
-reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "gzip", "brotli", "deflate", "rustls-tls"] }
+reqwest = { version = "0.13", default-features = false, features = ["blocking", "json", "gzip", "brotli", "deflate", "rustls"] }
 greentic-types = "0.4"
 greentic-interfaces = { version = "0.4", default-features = false, features = ["describe-v1", "runner-host-v1"] }
+greentic-interfaces-guest = { version = "0.4", default-features = false, features = ["guest"] }
 indexmap = "2"
 rand = { version = "0.9", features = ["std"] }
 serde_yaml_bw = "2"
-mcp-exec = { version = "0.4", path = "crates/mcp-exec" }
+greentic-mcp-exec = { version = "0.4", path = "crates/mcp-exec" }
 wit-bindgen = { version = "0.50", features = ["macros"] }
