--- a/crates/mcp-adapter/Cargo.toml
+++ b/crates/mcp-adapter/Cargo.toml
@@ -18,5 +18,5 @@ crate-type = ["cdylib", "rlib"]
 serde = { workspace = true, features = ["derive"] }
 serde_json.workspace = true
 thiserror.workspace = true
-greentic-interfaces-guest = { version = "0.4.45", default-features = false, features = ["guest"] }
+greentic-interfaces-guest.workspace = true
 wit-bindgen.workspace = true
