--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,6 +4,8 @@ members = [
     "crates/mcp-adapter",
     "greentic-mcp",
     "greentic-mcp/tests/fixtures/echo_tool",
+    "crates/mcp-exec/tests/router_echo",
+    "crates/mcp-exec/tests/legacy_exec",
 ]
 resolver = "2"
 
@@ -11,7 +13,7 @@ resolver = "2"
 edition = "2024"
 license = "MIT"
 repository = "https://github.com/agentic/greentic-mcp"
-version = "0.4.11"
+version = "0.4.12"
 
 [workspace.dependencies]
 anyhow = "1.0"
