--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,7 +13,7 @@ resolver = "2"
 edition = "2024"
 license = "MIT"
 repository = "https://github.com/agentic/greentic-mcp"
-version = "0.4.14"
+version = "0.4.15"
 
 [workspace.dependencies]
 anyhow = "1.0"
@@ -37,3 +37,5 @@ rand = { version = "0.9", features = ["std"] }
 serde_yaml_bw = "2"
 greentic-mcp-exec = { version = "0.4", path = "crates/mcp-exec" }
 wit-bindgen = { version = "0.50", features = ["macros"] }
+clap = { version = "4.5", features = ["derive"] }
+cap-std = "4"
