--- a/crates/mcp-exec/Cargo.toml
+++ b/crates/mcp-exec/Cargo.toml
@@ -27,6 +27,9 @@ greentic-types.workspace = true
 greentic-interfaces.workspace = true
 reqwest.workspace = true
 base64 = "0.22"
+clap.workspace = true
+cap-std.workspace = true
+tempfile.workspace = true
 
 [features]
 default = ["describe-v1", "runner-host-v1"]
