--- a/.github/workflows/rust-ci.yml
+++ b/.github/workflows/rust-ci.yml
@@ -14,6 +14,8 @@ permissions:
 jobs:
   offline:
     runs-on: ubuntu-latest
+    env:
+      RUSTFLAGS: -C link-arg=-fuse-ld=bfd
     steps:
       - uses: actions/checkout@v4
       - uses: dtolnay/rust-toolchain@stable
@@ -26,6 +28,8 @@ jobs:
 
   feature-builds:
     runs-on: ubuntu-latest
+    env:
+      RUSTFLAGS: -C link-arg=-fuse-ld=bfd
     steps:
       - uses: actions/checkout@v4
       - uses: dtolnay/rust-toolchain@stable
@@ -38,6 +42,7 @@ jobs:
     if: github.event_name == 'schedule' || github.ref == 'refs/heads/master'
     runs-on: ubuntu-latest
     env:
+      RUSTFLAGS: -C link-arg=-fuse-ld=bfd
       RUN_ONLINE_TESTS: "1"
     steps:
       - uses: actions/checkout@v4
