--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,6 +9,9 @@ members = [
 ]
 resolver = "2"
 
+[profile.test]
+debug = "line-tables-only"
+
 [workspace.package]
 edition = "2024"
 license = "MIT"
